--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>ceri-m1-techniques-de-test</name>
- <url> http://univ-avignon.fr </url>
+ <url> http://maven.apache.org </url>
  <build>
    <plugins>
       <plugin>
